tests/should_fail/match_float_on_bool_value.nv
module fail
// Float pattern on a bool match — type mismatch
let b = true
let r = match b {
    3.14 => "bad",
    _ => "ok",
}
